<resources>
    <string name="app_name">명화 선호도 투표 앱</string>
    <string name="pic1">독서하는 소녀</string>
    <string name="pic2">꽃장식 모자 소녀</string>
    <string name="pic3">부채를 든 소녀</string>
    <string name="pic4">이레느깡 단 베르양</string>
    <string name="pic5">잠자는 소녀</string>
    <string name="pic6">테라스의 두 자매</string>
    <string name="pic7">피아노 레슨</string>
    <string name="pic8">피아노 앞의 소녀들</string>
    <string name="pic9">해변에서</string>
    <string name="btn_vote">투표 종료</string>
    <string name="btn_back">돌아가기</string>
</resources>