<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center"
    android:stretchColumns="0"
    tools:context=".ResultActivity">

    <TableRow
        android:layout_marginVertical="3dp"
        android:gravity="center">

        <TextView
            android:id="@+id/selected_pic_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pic1"
            android:textSize="20sp" />


    </TableRow>

    <TableRow
        android:layout_marginVertical="3dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/selected_pic_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pic1"
            android:src="@drawable/pic1" />
    </TableRow>


    <TableRow

        android:layout_marginVertical="3dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pic1"
            android:textSize="15sp" />

        <RatingBar
            android:id="@+id/ratingBarPic1"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:layout_marginVertical="3dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pic2"
            android:textSize="15sp" />

        <RatingBar
            android:id="@+id/ratingBarPic2"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:layout_marginVertical="3dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pic3"
            android:textSize="15sp" />

        <RatingBar
            android:id="@+id/ratingBarPic3"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:layout_marginVertical="3dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pic4"
            android:textSize="15sp" />

        <RatingBar
            android:id="@+id/ratingBarPic4"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:layout_marginVertical="3dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pic5"
            android:textSize="15sp" />

        <RatingBar
            android:id="@+id/ratingBarPic5"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:layout_marginVertical="3dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pic6"
            android:textSize="15sp" />

        <RatingBar
            android:id="@+id/ratingBarPic6"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:layout_marginVertical="3dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pic7"
            android:textSize="15sp" />

        <RatingBar
            android:id="@+id/ratingBarPic7"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:layout_marginVertical="3dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pic8"
            android:textSize="15sp" />

        <RatingBar
            android:id="@+id/ratingBarPic8"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:layout_marginVertical="3dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pic9"
            android:textSize="15sp" />

        <RatingBar
            android:id="@+id/ratingBarPic9"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:layout_marginVertical="3dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_back" />

    </TableRow>


</TableLayout>


